--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ ul{
   font-family: Georgia, Times, serif;
 }
 
-h2{
+h1,h2,h3{
   font-family: Helvetica, Arial, sans-serif;
+}
+
+section{
+  padding-top: 30px;
 }
